Various Java cleanups in systemtest (#11620)
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>